[gd_scene load_steps=14 format=3 uid="uid://ctwovco0yuh0d"]

[ext_resource type="Script" uid="uid://br2y47n54dx5g" path="res://Scripts/Management/MainMenu.gd" id="1_hcxxy"]
[ext_resource type="AudioStream" uid="uid://f0spafnil45b" path="res://Sounds/MAINMENU-ROLLCREDITS.mp3" id="1_totuj"]
[ext_resource type="Texture2D" uid="uid://dsqcqev3ckyw5" path="res://Sprites/UI/buttonunpressed.png" id="3_eotax"]
[ext_resource type="AudioStream" uid="uid://d16cx23gxe477" path="res://Sounds/ROOM AMBIENCE.mp3" id="3_mjet1"]
[ext_resource type="Texture2D" uid="uid://dcydta8sq2wtn" path="res://Sprites/UI/buttonpressed.png" id="4_udm2q"]
[ext_resource type="BitMap" uid="uid://dbva6rtth7dl0" path="res://Sprites/UI/button_mask.png" id="5_udm2q"]
[ext_resource type="Texture2D" uid="uid://saitni3v32h8" path="res://Sprites/UI/quitbuttonunpressed.png" id="7_0vewo"]
[ext_resource type="Texture2D" uid="uid://5p8quwadelfw" path="res://Sprites/UI/title.png" id="7_0126h"]
[ext_resource type="Texture2D" uid="uid://b27x26qimq0vi" path="res://Sprites/UI/CREDITS_BUTTON.png" id="7_tbdrc"]
[ext_resource type="Script" uid="uid://c3y5vpu6qy7h6" path="res://Scripts/FishButton.gd" id="7_vuees"]
[ext_resource type="Texture2D" uid="uid://dyds0qu33m764" path="res://Sprites/UI/creditsbuttonpressed.png" id="8_vuees"]
[ext_resource type="Texture2D" uid="uid://d3lje1hesjkkr" path="res://Sprites/UI/QUITBUTTONPRESSED.png" id="8_wib81"]
[ext_resource type="BitMap" uid="uid://chx1n18k7k2l" path="res://Sprites/UI/credits_button_mask.png" id="10_3hb06"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_hcxxy")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_totuj")
volume_db = -9.88
autoplay = true
bus = &"Music"

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mjet1")
volume_db = 2.0
autoplay = true
bus = &"SFX"

[node name="Play Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -115.0
offset_right = 161.96301
offset_bottom = -30.0
grow_vertical = 0
texture_normal = ExtResource("3_eotax")
texture_hover = ExtResource("4_udm2q")
texture_click_mask = ExtResource("5_udm2q")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("7_vuees")
bob_speed = 1.64

[node name="Credits Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -76.0
offset_right = -7.4535522
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("7_tbdrc")
texture_hover = ExtResource("8_vuees")
texture_click_mask = ExtResource("10_3hb06")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("7_vuees")
bob_intensity = 1.5

[node name="Quit Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -49.0
offset_right = 89.0
offset_bottom = -3.0
grow_vertical = 0
texture_normal = ExtResource("7_0vewo")
texture_hover = ExtResource("8_wib81")
texture_click_mask = ExtResource("5_udm2q")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("7_vuees")
bob_speed = 2.0

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.0
offset_top = -11.0
offset_right = 171.0
offset_bottom = 121.0
grow_horizontal = 2
texture = ExtResource("7_0126h")
expand_mode = 1
stretch_mode = 5

[connection signal="button_up" from="Play Button" to="." method="on_play_button_pressed"]
[connection signal="button_up" from="Credits Button" to="." method="on_credits"]
[connection signal="button_up" from="Quit Button" to="." method="on_quit"]
